# mcp-keep

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  FIRST_TIME_SETUP.md  LICENSE  README.md  config.example.json  mcp-keep.spec
.github/workflows/: ci.yml  release.yml
cpp/: CMakeLists.txt
cpp/src/: Main.cpp
python/: proxy.py
tests/: integration_test.py  smoke_binary.py
